// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should render with component as child 1`] = `
<div>
  <a
    class="sc-gsTCUz duOMGZ"
    href="#"
  >
    <span
      class="sc-bdfBwQ dMYsmu"
    >
      Hi i am Name
    </span>
  </a>
</div>
`;

exports[`Link should render with default props 1`] = `
<div>
  <a
    class="sc-gsTCUz duOMGZ"
    href="#"
  >
    <span
      class="sc-bdfBwQ dMYsmu"
    >
      Test
    </span>
  </a>
</div>
`;
